Asana alignment  fixing

--- a/webadmin/src/app/batch/calendar-view/calendar-view.component.css
+++ b/webadmin/src/app/batch/calendar-view/calendar-view.component.css
@@ -18,7 +18,7 @@
 	background-color: #468FB9;
     color: #fff;
     font-size: 12px;
-    height: 90px;
+    height: 75px;
     border-radius: 4px;
 }
 .calender-number{
